Add: Header.js and props
- add Header.js for the global header of all pages
- add props like id, author to components.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -132,8 +132,10 @@ ul#rubrik li {
 
 ul li {
     display: list-item;
+    list-style: none;
     font-family: "Trebuchet MS", Arial, sans-serif;
     font-size: 12pt;
+    line-height: 1rem;
 }
 
 p.bibl {
