Added article of Sylvia Setzkorn.

--- a/src/compoments/Rubrik.module.css
+++ b/src/compoments/Rubrik.module.css
@@ -5,3 +5,13 @@ button {
     font-size: 24px;
     font-weight: bold;
 }
+
+.button:hover {
+    cursor: pointer; 
+}
+
+.button:focus,
+.button:active {
+    background-color: white;
+    transition: none;
+}
